# old_ref_codex

./: CMakeLists.txt  build.sh  rebuild.sh
codex/: CMakeLists.txt
codex.test/: CMakeLists.txt  gprintf.hpp  test_address.cpp  test_base64.cpp  test_buffer.cpp  test_chrono.cpp  test_diag.cpp  test_epoll.cpp  test_handler.cpp  test_loop.cpp  test_object_pool.cpp  test_string.cpp  test_udp.cpp  test_variadic.cpp
codex/include/codex/: bit.hpp  codex.hpp  container_of.hpp  handler.hpp  loop.hpp  next_prop_injection.hpp  predefs.hpp  slist.hpp
codex/include/codex/buffer/: ctrl_blk.hpp  shared_blk.hpp
codex/include/codex/convenience/: base64.hpp  crc32.hpp  object_pool.hpp  string.hpp  time.hpp
codex/include/codex/diag/: error.hpp
codex/include/codex/ip/: address.hpp
codex/include/codex/mux/: context.hpp  epoll.hpp  interest.hpp  mux.hpp
codex/include/codex/time/: convenience.hpp
codex/src/: loop.cpp
codex/src/buffer/: ctrl_blk.cpp  shared_blk.cpp
codex/src/convenience/: base64.cpp  crc32.cpp  time.cpp
codex/src/diag/: error.cpp
codex/src/mux/: context.cpp  epoll.cpp  interest.cpp
codex/src/time/: convenience.cpp
sample/asio_echo_server/: CMakeLists.txt  main.cpp
sample/boost_log/: CMakeLists.txt  main.cpp
